--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -112,28 +112,62 @@
   src: url('../fonts/Lato-Regular.eot?&1438879630#iefix') format('embedded-opentype'), url('../fonts/Lato-Regular.woff?1438879616') format('woff'), url('../fonts/Lato-Regular.woff2?1438879616') format('woff2'), url('../fonts/Lato-Regular.ttf?1438879586') format('truetype');
 }
 /* line 22, ../../scss/main.scss */
-body #news .thumbnail {
+body #news a.thumbnail {
   font-family: lato;
   border: 0;
   box-shadow: none;
-}
-/* line 26, ../../scss/main.scss */
-body #news .thumbnail h3 {
   text-transform: uppercase;
+}
+/* line 28, ../../scss/main.scss */
+body #news a.thumbnail .articleImg {
+  display: inline-block;
+  vertical-align: middle;
+  *vertical-align: auto;
+  *zoom: 1;
+  *display: inline;
+}
+/* line 30, ../../scss/main.scss */
+body #news a.thumbnail .articleImg img {
+  margin-right: auto;
+  margin-left: auto;
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+/* line 39, ../../scss/main.scss */
+body #news a.thumbnail:hover {
+  text-decoration: none;
+}
+/* line 41, ../../scss/main.scss */
+body #news a.thumbnail:hover h3 {
+  color: #ce0808 !important;
+}
+/* line 44, ../../scss/main.scss */
+body #news a.thumbnail:hover .articleImg {
+  background-color: #dc0909;
+}
+/* line 47, ../../scss/main.scss */
+body #news a.thumbnail:hover .articleImg img {
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=60);
+  opacity: 0.6;
+}
+/* line 53, ../../scss/main.scss */
+body #news a.thumbnail h3 {
   margin: 4px 2px;
-  color: #000;
+  color: #212121;
 }
-/* line 32, ../../scss/main.scss */
-body #news .thumbnail .date {
-  color: gray;
+/* line 58, ../../scss/main.scss */
+body #news a.thumbnail .date {
+  color: #909090;
+  font-style: italic;
 }
-/* line 37, ../../scss/main.scss */
+/* line 64, ../../scss/main.scss */
 body #slider {
   width: 100%;
   height: 650px;
   position: relative;
 }
-/* line 41, ../../scss/main.scss */
+/* line 68, ../../scss/main.scss */
 body #slider #slideIndex {
   height: 20px;
   position: absolute;
@@ -146,7 +180,7 @@ body #slider #slideIndex {
   *display: inline;
   text-align: left;
 }
-/* line 48, ../../scss/main.scss */
+/* line 75, ../../scss/main.scss */
 body #slider #slideIndex .indexRound {
   display: inline-block;
   vertical-align: middle;
@@ -161,23 +195,23 @@ body #slider #slideIndex .indexRound {
   border-radius: 20px;
   margin-right: 5px;
 }
-/* line 55, ../../scss/main.scss */
+/* line 82, ../../scss/main.scss */
 body #slider #slideIndex .indexRound:last-child {
   margin: 0;
 }
-/* line 58, ../../scss/main.scss */
+/* line 85, ../../scss/main.scss */
 body #slider #slideIndex .indexRound.active {
   background-color: #ce0808;
 }
-/* line 61, ../../scss/main.scss */
+/* line 88, ../../scss/main.scss */
 body #slider #slideIndex .indexRound.inactive {
   cursor: pointer;
 }
-/* line 63, ../../scss/main.scss */
+/* line 90, ../../scss/main.scss */
 body #slider #slideIndex .indexRound.inactive:hover {
   background-color: #b90707;
 }
-/* line 69, ../../scss/main.scss */
+/* line 96, ../../scss/main.scss */
 body #slider .glyphicon {
   position: absolute;
   color: #212121;
@@ -189,22 +223,22 @@ body #slider .glyphicon {
   border-radius: 55px;
   border: 8px solid transparent;
 }
-/* line 78, ../../scss/main.scss */
+/* line 105, ../../scss/main.scss */
 body #slider .glyphicon:hover {
   color: #9b0606;
   cursor: pointer;
   border: 8px solid #b90707;
   top: 50%;
 }
-/* line 84, ../../scss/main.scss */
+/* line 111, ../../scss/main.scss */
 body #slider .glyphicon.glyphicon-chevron-right {
   right: 5%;
 }
-/* line 87, ../../scss/main.scss */
+/* line 114, ../../scss/main.scss */
 body #slider .glyphicon.glyphicon-chevron-left {
   left: 5%;
 }
-/* line 91, ../../scss/main.scss */
+/* line 118, ../../scss/main.scss */
 body #slider #slideContainer {
   width: 66%;
   margin: 0 auto;
@@ -212,13 +246,13 @@ body #slider #slideContainer {
   overflow: hidden;
   top: 45px;
 }
-/* line 97, ../../scss/main.scss */
+/* line 124, ../../scss/main.scss */
 body #slider #slideContainer #slideContain {
   width: 100%;
   position: relative;
   height: 100%;
 }
-/* line 101, ../../scss/main.scss */
+/* line 128, ../../scss/main.scss */
 body #slider #slideContainer #slideContain .slide {
   display: inline-block;
   vertical-align: middle;
@@ -235,34 +269,31 @@ body #slider #slideContainer #slideContain .slide {
   -webkit-background-size: cover;
   background-size: cover;
 }
-/* line 109, ../../scss/main.scss */
-body #slider #slideContainer #slideContain .slide .text {
-  text-align: left;
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  background-color: rgba(0, 0, 0, 0.5);
-  color: #fff;
-  max-width: 40%;
-  padding: 10px;
-}
-/* line 116, ../../scss/main.scss */
-body #slider #slideContainer #slideContain .slide .text .title {
+/* line 136, ../../scss/main.scss */
+body #slider #slideContainer #slideContain .slide h4 {
+  font-family: lato;
+  text-transform: uppercase;
+  color: white;
+  width: 100%;
+  background-color: #212121;
+  margin-top: 0;
+  text-align: center;
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=85);
+  opacity: 0.85;
+  padding: 10px 0;
   font-size: 25px;
-  display: block;
-  margin-bottom: 10px;
 }
 
 @media only screen and (max-width: 992px) {
-  /* line 130, ../../scss/main.scss */
+  /* line 156, ../../scss/main.scss */
   #slider #slideContainer {
     width: 100% !important;
   }
-  /* line 134, ../../scss/main.scss */
+  /* line 160, ../../scss/main.scss */
   #slider .glyphicon-chevron-right {
     display: none;
   }
-  /* line 137, ../../scss/main.scss */
+  /* line 163, ../../scss/main.scss */
   #slider .glyphicon-chevron-left {
     display: none;
   }
