--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -117,8 +117,9 @@ body #news a.thumbnail {
   border: 0;
   box-shadow: none;
   text-transform: uppercase;
+  text-decoration: none;
 }
-/* line 28, ../../scss/main.scss */
+/* line 29, ../../scss/main.scss */
 body #news a.thumbnail .articleImg {
   display: inline-block;
   vertical-align: middle;
@@ -126,7 +127,7 @@ body #news a.thumbnail .articleImg {
   *zoom: 1;
   *display: inline;
 }
-/* line 30, ../../scss/main.scss */
+/* line 31, ../../scss/main.scss */
 body #news a.thumbnail .articleImg img {
   margin-right: auto;
   margin-left: auto;
@@ -134,40 +135,40 @@ body #news a.thumbnail .articleImg img {
   max-width: 100%;
   height: auto;
 }
-/* line 39, ../../scss/main.scss */
-body #news a.thumbnail:hover {
+/* line 40, ../../scss/main.scss */
+body #news a.thumbnail:hover, body #news a.thumbnail:visited, body #news a.thumbnail:active {
   text-decoration: none;
 }
-/* line 41, ../../scss/main.scss */
+/* line 45, ../../scss/main.scss */
 body #news a.thumbnail:hover h3 {
   color: #ce0808 !important;
 }
-/* line 44, ../../scss/main.scss */
+/* line 48, ../../scss/main.scss */
 body #news a.thumbnail:hover .articleImg {
   background-color: #dc0909;
 }
-/* line 47, ../../scss/main.scss */
+/* line 51, ../../scss/main.scss */
 body #news a.thumbnail:hover .articleImg img {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=60);
   opacity: 0.6;
 }
-/* line 53, ../../scss/main.scss */
+/* line 57, ../../scss/main.scss */
 body #news a.thumbnail h3 {
   margin: 4px 2px;
   color: #212121;
 }
-/* line 58, ../../scss/main.scss */
+/* line 62, ../../scss/main.scss */
 body #news a.thumbnail .date {
   color: #909090;
   font-style: italic;
 }
-/* line 64, ../../scss/main.scss */
+/* line 68, ../../scss/main.scss */
 body #slider {
   width: 100%;
   height: 650px;
   position: relative;
 }
-/* line 68, ../../scss/main.scss */
+/* line 72, ../../scss/main.scss */
 body #slider #slideIndex {
   height: 20px;
   position: absolute;
@@ -180,7 +181,7 @@ body #slider #slideIndex {
   *display: inline;
   text-align: left;
 }
-/* line 75, ../../scss/main.scss */
+/* line 79, ../../scss/main.scss */
 body #slider #slideIndex .indexRound {
   display: inline-block;
   vertical-align: middle;
@@ -195,23 +196,23 @@ body #slider #slideIndex .indexRound {
   border-radius: 20px;
   margin-right: 5px;
 }
-/* line 82, ../../scss/main.scss */
+/* line 86, ../../scss/main.scss */
 body #slider #slideIndex .indexRound:last-child {
   margin: 0;
 }
-/* line 85, ../../scss/main.scss */
+/* line 89, ../../scss/main.scss */
 body #slider #slideIndex .indexRound.active {
   background-color: #ce0808;
 }
-/* line 88, ../../scss/main.scss */
+/* line 92, ../../scss/main.scss */
 body #slider #slideIndex .indexRound.inactive {
   cursor: pointer;
 }
-/* line 90, ../../scss/main.scss */
+/* line 94, ../../scss/main.scss */
 body #slider #slideIndex .indexRound.inactive:hover {
   background-color: #b90707;
 }
-/* line 96, ../../scss/main.scss */
+/* line 100, ../../scss/main.scss */
 body #slider .glyphicon {
   position: absolute;
   color: #212121;
@@ -223,22 +224,22 @@ body #slider .glyphicon {
   border-radius: 55px;
   border: 8px solid transparent;
 }
-/* line 105, ../../scss/main.scss */
+/* line 109, ../../scss/main.scss */
 body #slider .glyphicon:hover {
   color: #9b0606;
   cursor: pointer;
-  border: 8px solid #b90707;
+  border: 8px solid #ce0808;
   top: 50%;
 }
-/* line 111, ../../scss/main.scss */
+/* line 115, ../../scss/main.scss */
 body #slider .glyphicon.glyphicon-chevron-right {
   right: 5%;
 }
-/* line 114, ../../scss/main.scss */
+/* line 118, ../../scss/main.scss */
 body #slider .glyphicon.glyphicon-chevron-left {
   left: 5%;
 }
-/* line 118, ../../scss/main.scss */
+/* line 122, ../../scss/main.scss */
 body #slider #slideContainer {
   width: 66%;
   margin: 0 auto;
@@ -246,13 +247,13 @@ body #slider #slideContainer {
   overflow: hidden;
   top: 45px;
 }
-/* line 124, ../../scss/main.scss */
+/* line 128, ../../scss/main.scss */
 body #slider #slideContainer #slideContain {
   width: 100%;
   position: relative;
   height: 100%;
 }
-/* line 128, ../../scss/main.scss */
+/* line 132, ../../scss/main.scss */
 body #slider #slideContainer #slideContain .slide {
   display: inline-block;
   vertical-align: middle;
@@ -262,14 +263,14 @@ body #slider #slideContainer #slideContain .slide {
   position: relative;
   height: 540px;
   width: 100%;
-  background-image: url("http://fr-minecraft.net/upload/wallpapers/images/fr-minecraft_wallpaper_BKQM.jpg");
+  background-image: url("https://media.mirrorsedge.com/content/www-mirrorsedge/en_US/news-articles/a-runners-destiny/_jcr_content/featuredImage/renditions/rendition1.img.jpg");
   background-repeat: no-repeat;
   -moz-background-size: cover;
   -o-background-size: cover;
   -webkit-background-size: cover;
   background-size: cover;
 }
-/* line 136, ../../scss/main.scss */
+/* line 140, ../../scss/main.scss */
 body #slider #slideContainer #slideContain .slide h4 {
   font-family: lato;
   text-transform: uppercase;
@@ -283,17 +284,55 @@ body #slider #slideContainer #slideContain .slide h4 {
   padding: 10px 0;
   font-size: 25px;
 }
+/* line 158, ../../scss/main.scss */
+body #staff .thumbnail .caption {
+  font-family: lato;
+  height: auto;
+}
+/* line 161, ../../scss/main.scss */
+body #staff .thumbnail .caption a {
+  margin-bottom: 8px;
+  display: inline-block;
+  vertical-align: middle;
+  *vertical-align: auto;
+  *zoom: 1;
+  *display: inline;
+  padding-right: 5px;
+}
+/* line 165, ../../scss/main.scss */
+body #staff .thumbnail .caption a img {
+  width: 30px;
+  height: 30px;
+}
+/* line 170, ../../scss/main.scss */
+body #staff .thumbnail .caption h3 {
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+/* line 174, ../../scss/main.scss */
+body #staff .thumbnail .caption h4 {
+  margin-top: 1px;
+  padding-left: 5px;
+  margin-bottom: 5px;
+  font-size: 16px;
+  font-style: italic;
+}
+/* line 181, ../../scss/main.scss */
+body #staff .thumbnail .caption span.desc {
+  display: block;
+  font-family: roboto;
+}
 
 @media only screen and (max-width: 992px) {
-  /* line 156, ../../scss/main.scss */
+  /* line 192, ../../scss/main.scss */
   #slider #slideContainer {
     width: 100% !important;
   }
-  /* line 160, ../../scss/main.scss */
+  /* line 196, ../../scss/main.scss */
   #slider .glyphicon-chevron-right {
     display: none;
   }
-  /* line 163, ../../scss/main.scss */
+  /* line 199, ../../scss/main.scss */
   #slider .glyphicon-chevron-left {
     display: none;
   }
