--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -14,7 +14,7 @@
   opacity: 0.7;
   z-index: 200;
   background-color: #f7f7f7;
-  border-color: bgDefault;
+  border-color: #f7f7f7;
   -moz-border-radius: 0;
   -webkit-border-radius: 0;
   border-radius: 0;
@@ -23,45 +23,45 @@
 .navbar-default .container-fluid .navbar-brand {
   color: #000;
   padding: 25px 5px;
-  /* &:hover, &:focus { 
-  	color: #fff; } */
 }
-/* line 17, ../../scss/_navbar.scss */
+/* line 15, ../../scss/_navbar.scss */
 .navbar-default .container-fluid .navbar-text {
   color: #000;
 }
-/* line 21, ../../scss/_navbar.scss */
+/* line 19, ../../scss/_navbar.scss */
 .navbar-default .container-fluid .navbar-nav > li > a {
   padding: 25px 15px;
   color: #000;
 }
-/* line 24, ../../scss/_navbar.scss */
+/* line 22, ../../scss/_navbar.scss */
 .navbar-default .container-fluid .navbar-nav > li > a:hover {
-  background-color: bgDefault;
+  background-color: #f7f7f7;
   color: #ce0808;
   font-weight: 800;
 }
-/* line 28, ../../scss/_navbar.scss */
+/* line 26, ../../scss/_navbar.scss */
 .navbar-default .container-fluid .navbar-nav > li > a:focus {
-  color: #ce0808;
+  color: #000;
 }
-/* line 31, ../../scss/_navbar.scss */
+/* line 29, ../../scss/_navbar.scss */
 .navbar-default .container-fluid .navbar-nav > .active > a, .navbar-default .container-fluid .navbar-nav > .active > a:hover, .navbar-default .container-fluid .navbar-nav > .active > a:focus {
+  background-image: none;
+  box-shadow: none;
   color: #ce0808;
-  background-color: bgDefault;
+  background-color: #f7f7f7;
 }
 /* line 35, ../../scss/_navbar.scss */
 .navbar-default .container-fluid .navbar-nav > .open > a, .navbar-default .container-fluid .navbar-nav > .open > a:hover, .navbar-default .container-fluid .navbar-nav > .open > a:focus {
   color: #ce0808;
-  background-color: bgDefault;
+  background-color: #f7f7f7;
 }
 /* line 38, ../../scss/_navbar.scss */
 .navbar-default .container-fluid .navbar-toggle {
-  border-color: bgDefault;
+  border-color: #f7f7f7;
 }
 /* line 40, ../../scss/_navbar.scss */
 .navbar-default .container-fluid .navbar-toggle:hover, .navbar-default .container-fluid .navbar-toggle:focus {
-  background-color: bgDefault;
+  background-color: #f7f7f7;
 }
 /* line 42, ../../scss/_navbar.scss */
 .navbar-default .container-fluid .navbar-toggle .icon-bar {
@@ -93,7 +93,7 @@
   /* line 58, ../../scss/_navbar.scss */
   .navbar-default .navbar-nav .open .dropdown-menu > .active > a, .navbar-default .navbar-nav .open .dropdown-menu > .active > a:hover, .navbar-default .navbar-nav .open .dropdown-menu > .active > a:focus {
     color: #ce0808;
-    background-color: bgDefault;
+    background-color: #f7f7f7;
   }
 }
 @font-face {
@@ -111,7 +111,90 @@
   src: url('../fonts/Lato-Regular.eot?1438879630');
   src: url('../fonts/Lato-Regular.eot?&1438879630#iefix') format('embedded-opentype'), url('../fonts/Lato-Regular.woff?1438879616') format('woff'), url('../fonts/Lato-Regular.woff2?1438879616') format('woff2'), url('../fonts/Lato-Regular.ttf?1438879586') format('truetype');
 }
-/* line 22, ../../scss/main.scss */
+/* line 20, ../../scss/main.scss */
+body {
+  font-smoothing: antialiased;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+/* line 24, ../../scss/main.scss */
+body h2 {
+  font-family: lato-thin;
+  text-transform: uppercase;
+  background-color: #ce0808;
+  color: #fff;
+  -moz-border-radius: 25px 0px;
+  -webkit-border-radius: 25px;
+  border-radius: 25px 0px;
+  padding: 10px 42px;
+  display: inline-block;
+  vertical-align: middle;
+  *vertical-align: auto;
+  *zoom: 1;
+  *display: inline;
+  margin-bottom: 42px;
+}
+/* line 34, ../../scss/main.scss */
+body #discover {
+  -moz-background-size: contain;
+  -o-background-size: contain;
+  -webkit-background-size: contain;
+  background-size: contain;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 60vw;
+  text-align: center;
+}
+/* line 40, ../../scss/main.scss */
+body #discover #discoverTxt {
+  display: inline-block;
+  vertical-align: middle;
+  *vertical-align: auto;
+  *zoom: 1;
+  *display: inline;
+  text-align: left;
+  font-family: lato;
+  color: #46505a;
+  margin-top: calc(30% - 244px);
+  text-transform: uppercase;
+}
+/* line 48, ../../scss/main.scss */
+body #discover #discoverTxt p {
+  margin-bottom: 30px;
+}
+/* line 52, ../../scss/main.scss */
+body #discover #discoverTxt a {
+  font-family: lato-thin;
+  color: #fff;
+  font-size: 17px;
+  border: 1px solid transparent;
+  -moz-border-radius: 12px 0px;
+  -webkit-border-radius: 12px;
+  border-radius: 12px 0px;
+  padding: 10px 20px;
+}
+/* line 61, ../../scss/main.scss */
+body #discover #discoverTxt a.buttonDownload {
+  background-color: #ce0808;
+  border-color: #ce0808;
+  margin-right: 32px;
+}
+/* line 65, ../../scss/main.scss */
+body #discover #discoverTxt a.buttonDownload:hover {
+  border-color: #e50909;
+  background-color: #e50909;
+}
+/* line 71, ../../scss/main.scss */
+body #discover #discoverTxt a.buttonMedia {
+  border-color: #252525;
+  color: #000;
+}
+/* line 74, ../../scss/main.scss */
+body #discover #discoverTxt a.buttonMedia:hover {
+  color: #fff;
+  background-color: #252525;
+}
+/* line 83, ../../scss/main.scss */
 body #news a.thumbnail {
   font-family: lato;
   border: 0;
@@ -119,7 +202,7 @@ body #news a.thumbnail {
   text-transform: uppercase;
   text-decoration: none;
 }
-/* line 29, ../../scss/main.scss */
+/* line 90, ../../scss/main.scss */
 body #news a.thumbnail .articleImg {
   display: inline-block;
   vertical-align: middle;
@@ -127,7 +210,7 @@ body #news a.thumbnail .articleImg {
   *zoom: 1;
   *display: inline;
 }
-/* line 31, ../../scss/main.scss */
+/* line 92, ../../scss/main.scss */
 body #news a.thumbnail .articleImg img {
   margin-right: auto;
   margin-left: auto;
@@ -135,40 +218,62 @@ body #news a.thumbnail .articleImg img {
   max-width: 100%;
   height: auto;
 }
-/* line 40, ../../scss/main.scss */
+/* line 101, ../../scss/main.scss */
 body #news a.thumbnail:hover, body #news a.thumbnail:visited, body #news a.thumbnail:active {
   text-decoration: none;
 }
-/* line 45, ../../scss/main.scss */
+/* line 106, ../../scss/main.scss */
 body #news a.thumbnail:hover h3 {
   color: #ce0808 !important;
 }
-/* line 48, ../../scss/main.scss */
+/* line 109, ../../scss/main.scss */
 body #news a.thumbnail:hover .articleImg {
   background-color: #dc0909;
 }
-/* line 51, ../../scss/main.scss */
+/* line 112, ../../scss/main.scss */
 body #news a.thumbnail:hover .articleImg img {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=60);
   opacity: 0.6;
 }
-/* line 57, ../../scss/main.scss */
+/* line 118, ../../scss/main.scss */
 body #news a.thumbnail h3 {
   margin: 4px 2px;
   color: #212121;
 }
-/* line 62, ../../scss/main.scss */
+/* line 123, ../../scss/main.scss */
 body #news a.thumbnail .date {
   color: #909090;
   font-style: italic;
 }
-/* line 68, ../../scss/main.scss */
+/* line 130, ../../scss/main.scss */
+body #downloadRow .thumbnail {
+  font-family: roboto;
+  background-color: #ce0808;
+  padding: 0;
+}
+/* line 135, ../../scss/main.scss */
+body #downloadRow .caption {
+  background-color: #ea0909;
+  margin-bottom: 0;
+  color: #fff;
+}
+/* line 139, ../../scss/main.scss */
+body #downloadRow .caption ul {
+  list-style-type: none;
+}
+/* line 143, ../../scss/main.scss */
+body #downloadRow img {
+  width: 200px;
+  height: 200px;
+  padding: 0 25px;
+}
+/* line 149, ../../scss/main.scss */
 body #slider {
   width: 100%;
   height: 650px;
   position: relative;
 }
-/* line 72, ../../scss/main.scss */
+/* line 153, ../../scss/main.scss */
 body #slider #slideIndex {
   height: 20px;
   position: absolute;
@@ -181,7 +286,7 @@ body #slider #slideIndex {
   *display: inline;
   text-align: left;
 }
-/* line 79, ../../scss/main.scss */
+/* line 160, ../../scss/main.scss */
 body #slider #slideIndex .indexRound {
   display: inline-block;
   vertical-align: middle;
@@ -196,23 +301,23 @@ body #slider #slideIndex .indexRound {
   border-radius: 20px;
   margin-right: 5px;
 }
-/* line 86, ../../scss/main.scss */
+/* line 167, ../../scss/main.scss */
 body #slider #slideIndex .indexRound:last-child {
   margin: 0;
 }
-/* line 89, ../../scss/main.scss */
+/* line 170, ../../scss/main.scss */
 body #slider #slideIndex .indexRound.active {
   background-color: #ce0808;
 }
-/* line 92, ../../scss/main.scss */
+/* line 173, ../../scss/main.scss */
 body #slider #slideIndex .indexRound.inactive {
   cursor: pointer;
 }
-/* line 94, ../../scss/main.scss */
+/* line 175, ../../scss/main.scss */
 body #slider #slideIndex .indexRound.inactive:hover {
   background-color: #b90707;
 }
-/* line 100, ../../scss/main.scss */
+/* line 181, ../../scss/main.scss */
 body #slider .glyphicon {
   position: absolute;
   color: #212121;
@@ -224,22 +329,22 @@ body #slider .glyphicon {
   border-radius: 55px;
   border: 8px solid transparent;
 }
-/* line 109, ../../scss/main.scss */
+/* line 190, ../../scss/main.scss */
 body #slider .glyphicon:hover {
   color: #9b0606;
   cursor: pointer;
   border: 8px solid #ce0808;
   top: 50%;
 }
-/* line 115, ../../scss/main.scss */
+/* line 196, ../../scss/main.scss */
 body #slider .glyphicon.glyphicon-chevron-right {
   right: 5%;
 }
-/* line 118, ../../scss/main.scss */
+/* line 199, ../../scss/main.scss */
 body #slider .glyphicon.glyphicon-chevron-left {
   left: 5%;
 }
-/* line 122, ../../scss/main.scss */
+/* line 203, ../../scss/main.scss */
 body #slider #slideContainer {
   width: 66%;
   margin: 0 auto;
@@ -247,13 +352,13 @@ body #slider #slideContainer {
   overflow: hidden;
   top: 45px;
 }
-/* line 128, ../../scss/main.scss */
+/* line 209, ../../scss/main.scss */
 body #slider #slideContainer #slideContain {
   width: 100%;
   position: relative;
   height: 100%;
 }
-/* line 132, ../../scss/main.scss */
+/* line 213, ../../scss/main.scss */
 body #slider #slideContainer #slideContain .slide {
   display: inline-block;
   vertical-align: middle;
@@ -270,7 +375,7 @@ body #slider #slideContainer #slideContain .slide {
   -webkit-background-size: cover;
   background-size: cover;
 }
-/* line 140, ../../scss/main.scss */
+/* line 221, ../../scss/main.scss */
 body #slider #slideContainer #slideContain .slide h4 {
   font-family: lato;
   text-transform: uppercase;
@@ -284,13 +389,13 @@ body #slider #slideContainer #slideContain .slide h4 {
   padding: 10px 0;
   font-size: 25px;
 }
-/* line 158, ../../scss/main.scss */
-body #staff .thumbnail .caption {
+/* line 239, ../../scss/main.scss */
+body #staffRow .thumbnail .caption {
   font-family: lato;
   height: auto;
 }
-/* line 161, ../../scss/main.scss */
-body #staff .thumbnail .caption a {
+/* line 242, ../../scss/main.scss */
+body #staffRow .thumbnail .caption a {
   margin-bottom: 8px;
   display: inline-block;
   vertical-align: middle;
@@ -299,40 +404,98 @@ body #staff .thumbnail .caption a {
   *display: inline;
   padding-right: 5px;
 }
-/* line 165, ../../scss/main.scss */
-body #staff .thumbnail .caption a img {
+/* line 246, ../../scss/main.scss */
+body #staffRow .thumbnail .caption a img {
   width: 30px;
   height: 30px;
 }
-/* line 170, ../../scss/main.scss */
-body #staff .thumbnail .caption h3 {
+/* line 251, ../../scss/main.scss */
+body #staffRow .thumbnail .caption h3 {
   margin-top: 0px;
   margin-bottom: 0px;
 }
-/* line 174, ../../scss/main.scss */
-body #staff .thumbnail .caption h4 {
+/* line 255, ../../scss/main.scss */
+body #staffRow .thumbnail .caption h4 {
   margin-top: 1px;
-  padding-left: 5px;
   margin-bottom: 5px;
   font-size: 16px;
   font-style: italic;
 }
-/* line 181, ../../scss/main.scss */
-body #staff .thumbnail .caption span.desc {
+/* line 261, ../../scss/main.scss */
+body #staffRow .thumbnail .caption span.desc {
   display: block;
   font-family: roboto;
 }
+/* line 269, ../../scss/main.scss */
+body footer {
+  padding: 50px 0;
+  margin-top: 100px;
+  background-color: #ce0808;
+  text-align: center;
+  color: #fff;
+}
+/* line 275, ../../scss/main.scss */
+body footer div {
+  text-align: left;
+  display: inline-block;
+  vertical-align: middle;
+  *vertical-align: auto;
+  *zoom: 1;
+  *display: inline;
+}
+/* line 278, ../../scss/main.scss */
+body footer div p {
+  margin-bottom: 2px;
+}
+/* line 283, ../../scss/main.scss */
+body a {
+  color: #fff;
+  font-weight: bold;
+}
+/* line 286, ../../scss/main.scss */
+body a:link, body a:hover, body a:visited, body a:active {
+  text-decoration: none;
+}
+/* line 289, ../../scss/main.scss */
+body a:hover {
+  color: #900606;
+}
 
+@media (min-width: 0px) and (max-width: 767px) {
+  /* line 296, ../../scss/main.scss */
+  #discover {
+    background-image: url(https://media.mirrorsedge.com/content/www-mirrorsedge/en_US/_jcr_content/components/hero_570bee91500d1/backgroundImageSet/small.img.jpg);
+    height: 200vw !important;
+  }
+}
+@media (min-width: 768px) {
+  /* line 303, ../../scss/main.scss */
+  #discover {
+    background-image: url(https://media.mirrorsedge.com/content/www-mirrorsedge/en_US/_jcr_content/components/hero_570bee91500d1/backgroundImageSet/medium.img.jpg);
+  }
+}
+@media (min-width: 1024px) {
+  /* line 309, ../../scss/main.scss */
+  #discover {
+    background-image: url(https://media.mirrorsedge.com/content/www-mirrorsedge/en_US/_jcr_content/components/hero_570bee91500d1/backgroundImageSet/large.img.jpg);
+  }
+}
+@media (min-width: 1362px) {
+  /* line 315, ../../scss/main.scss */
+  #discover {
+    background-image: url(https://media.mirrorsedge.com/content/www-mirrorsedge/en_US/_jcr_content/components/hero_570bee91500d1/backgroundImageSet/wide.img.jpg);
+  }
+}
 @media only screen and (max-width: 992px) {
-  /* line 192, ../../scss/main.scss */
+  /* line 323, ../../scss/main.scss */
   #slider #slideContainer {
     width: 100% !important;
   }
-  /* line 196, ../../scss/main.scss */
+  /* line 327, ../../scss/main.scss */
   #slider .glyphicon-chevron-right {
     display: none;
   }
-  /* line 199, ../../scss/main.scss */
+  /* line 330, ../../scss/main.scss */
   #slider .glyphicon-chevron-left {
     display: none;
   }
