--- a/scss/main.scss
+++ b/scss/main.scss
@@ -285,6 +285,7 @@ body {
 		font-weight: bold;
 		&:link, &:hover, &:visited, &:active {
 			text-decoration: none;
+			color: #fff;
 		}
 		&:hover {
 			
